[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cometusb"
version = "1.0.0"
description = "Create Linux bootable USB from CLI"
readme = "README.md"
authors = [
    { name="Shahid Rahaman", email="shahidrahman333@gmail.com" }
]
license = {file = "LICENSE.txt"}
requires-python = ">=3.8"

dependencies = [
    "requests",
    "tqdm",
    "tabulate"
]

[project.urls]
Homepage = "https://github.com/CometUSB/CometUSB"
Documentation = "https://thesniper333.github.io/CometUSB/"
Changelog = "https://github.com/CometUSB/CometUSB/releases"

[project.scripts]
cometusb = "cometusb.cometusb:main"
